--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,5 +22,9 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Test
-      run: mvn --batch-mode test
+    - name: Deploy to Heroku
+      uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_app_name: 'gubbert-testworthy-cicd-spring'
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_email: 'samuel.gubbins@gmail.com'
